# openchess-rs

./: Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: cd.yml  ci.yml  main.yml  main_openchess-api.yml
src/: chess.rs  error.rs  lib.rs  logger.rs  main.rs
src/chess/: board.rs  piece.rs
src/v1/: mod.rs
