[package]
name = "openchess-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
axum = "0.8.1"
serde = { version = "1.0.217", features = ["derive"] }
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
http-body-util = "0.1.2"

[lib]
name = "lib_openchess"
path = "src/lib.rs"

[[bin]]
name = "openchess-rs"
path = "src/main.rs"
